Fix disabled link style in dark mode

--- a/themes/linuscodes/static/css/master.scss
+++ b/themes/linuscodes/static/css/master.scss
@@ -98,6 +98,14 @@ a {
       &:hover {
          color: $black;
       }
+
+      @media (prefers-color-scheme: dark) {
+         color: $white;
+
+         &:hover {
+            color: $white;
+         }
+      }
    }
 
    &:hover {
